--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             Expérience Professionnelle
                         </h2>
                     </div>
-                    <div class="timeline">
+                    <div class="">
                         <div class="timeline-item">
                             <div class="timeline-date">Mars – Sept 2025</div>
                             <div class="timeline-content">
